--- a/package.json
+++ b/package.json
@@ -10,26 +10,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^5.18.0",
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1",
-    "iron-session": "^8.0.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "validator": "^13.12.0",
-    "zod": "^3.23.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/validator": "^13.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
