--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.18.0",
+    "@remixicon/react": "^4.2.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.2",
