<feat>: 검색 추가 및 디렉토리 구조 변경

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.18.0",
     "@remixicon/react": "^4.2.0",
     "@types/bcrypt": "^5.0.2",
